@@ -38,6 +38,7 @@ import org.elasticsearch.script.ScriptService;
 
 import java.io.InputStream;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 
 import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationException;
@@ -47,10 +48,8 @@ import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationExcept
  */
 public final class ScriptProcessor extends AbstractProcessor {
 
-    private static final Map<String, String> DEPRECATIONS;
-    static {
-        DEPRECATIONS = Map.of("_type", "[types removal] Looking up doc types [_type] in scripts is deprecated.");
-    }
+    private static final Map<String, String> DEPRECATIONS =
+            Collections.singletonMap("_type", "[types removal] Looking up doc types [_type] in scripts is deprecated.");
 
     public static final String TYPE = "script";
 
